clusters/talos-cluster/apps/vault-secrets-operator/controller/ciliumnetworkpolicy-controller-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vso-controller-egress
  namespace: vault-secrets-operator
spec:
  endpointSelector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/instance: vault-secrets-operator
      app.kubernetes.io/name: vault-secrets-operator
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": deploy-vault
            "k8s:app.kubernetes.io/component": server
            "k8s:app.kubernetes.io/name": vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
