clusters/talos-cluster/apps/vault-secrets-operator/controller/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: vault-secrets-operator
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
